@@ -1,3 +1,8 @@
+2013-01-11  Sergey Poznyakoff  <gray@gnu.org.ua>
+
+	* info/window.c (calculate_line_starts): call window_line_map_init,
+	19 Dec 2012 14:10:30 +0200
+
 2013-01-08  Patrice Dumas  <pertusus@free.fr>
 
 	* po_document/fr.us-ascii.po: update by Jean-Charles Malahieude,
